[package]
name = "stop-goguardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23"
whoami = { version = "1.2", optional = true }

[profile.release]
lto = true
opt-level = "s"

[[bin]]
name = "stop-goguardian-installer"
path = "src/installer.rs"
required-features = ["installer"]

[features]
installer = []