[package]
name = "stop-goguardian"
version = "0.1.0"
edition = "2021"
include = ["src/main.rs", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23"
winrt-notification = { version = "0.5.1", optional = true }

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = "symbols" # Strip unused symbols

[features]
auth = ["winrt-notification"]
